[tool.poetry]
name = "nx-migrate"
version = "0.3.0"
description = "call nx migrate anywhere"
authors = ["Wei Sun <sunwei415@126.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/time4Wiley/nx.migrate"
packages = [{include = "nx_migrate"}]

[tool.poetry.dependencies]
python = "^3.6"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nx-migrate = "nx_migrate.nx_migrate:main"
